# pyylmao

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  compose.incus.yml  compose.yml  pyproject.toml
docs/: behavior.md
irc/: __init__.py  bot.py  client.py  strings.py
irclib/: __init__.py  client.py
llm/: __init__.py  models.py  tools.py
pyylmao/: __init__.py  __main__.py  aliases.py  ansi2irc.py  ascii_art.py  blair.py  bluesky.py  cat.py  chess_game.py  chkdomain.py  command_list.py  config.py  cowsay.py  cp.py  crt.py  curl.py  define.py  echo.py  eval_command.py  figlet.py  filters.py  formatting.py  fortune.py  gay.py  generated_commands.py  godsays.py  golem.py  history_store.py  horoscope.py  host.py  huggingface.py  image_server.py  imdb.py  img2irc.py  imgcap.py  invite.py  irc.py  ircbot.py  kvstore.py  light.py  (+37 more)
pyylmao/commands/: __init__.py
tests/: test_aliases.py  test_ansi2irc.py  test_ascii_art.py  test_blair.py  test_bluesky.py  test_cat.py  test_chess_game.py  test_chkdomain.py  test_compat_imports.py  test_cowsay.py  test_cp.py  test_crt.py  test_curl.py  test_define.py  test_echo.py  test_eval_command.py  test_figlet.py  test_fortune.py  test_gay.py  test_generated_commands.py  test_godsays.py  test_golem.py  test_helpers.py  test_horoscope.py  test_host.py  test_huggingface.py  test_imdb.py  test_img2irc.py  test_invite.py  test_irc.py  test_kvstore.py  test_light.py  test_ligma.py  test_link_preview.py  test_livebench.py  test_llm.py  test_llm_prices.py  test_llm_tools.py  test_mdcat.py  test_models.py  (+24 more)
(+11 files in other folders)
